# bq-lib

./: .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix
lib/: LICENSE  big-query-lib.cabal  bq-lib.cabal
lib/src/: BQ.hs  BigQuery.hs
lib/src/BQ/: Effects.hs  Parsing.hs
lib/src/BQ/Types/: BigQuery.hs  Text1.hs
nix/: conduit-extra.nix  conduit.nix  gogol-bigquery.nix  gogol-core.nix  gogol.nix  resourcet.nix  servant.nix  streaming-commons.nix
